# Lego-like-Geomagnetic-Positioning

./: .gitignore  CHANGELOG.md  README.md  geomag_web_app.py  main.py  main_multi_methods.py  main_own_data_package_demo.py  main_own_simulation.py  pyproject.toml  run.bat  run.sh
.github/workflows/: test.yml
Geomag/: __init__.py  algorithms.py  blocks.py  branching.py  distance.py  experiment.py  initiation.py  models.py  nn.py  own_dataset_registry.py  pipeline.py  utils.py  visualization.py
data/own_data/: my_mag_map.npz
data/own_data/Geomagnetic Navigation 2026-03-03 15-28-45/: Accelerometer.csv  Gyroscope.csv  Location.csv  Magnetometer.csv
data/own_data/Geomagnetic Navigation 2026-03-19 20-03-26/: Accelerometer.csv  Gyroscope.csv  Location.csv
data/own_data/Geomagnetic Navigation 2026-03-19 20-04-39/: Accelerometer.csv  Gyroscope.csv  Location.csv  Magnetometer.csv
data/own_data/Geomagnetic Navigation 2026-03-19 20-10-45/: Accelerometer.csv  Gyroscope.csv  Location.csv  Magnetometer.csv
data/own_data_package/: README.md  manifest.json
data/own_data_package/route1_run1/: Accelerometer.csv  Gyroscope.csv  Location.csv  Magnetometer.csv
data/own_data_package/route2_run1/: Magnetometer.csv
data/processed/: uji_mag_grid_preview_kriging.npz
data/raw/raw_own/: map_building.py
docs/superpowers/plans/: 2026-05-31-bokeh-ui-redesign.md
docs/superpowers/specs/: 2026-05-31-bokeh-ui-redesign.md
examples/: main_get_map_temp.py  main_get_sensor_and_len.py  main_get_true_route.py  main_multi_methods.py  main_own_data_package_demo.py  main_own_simulation.py
geomagnetic_positioning_ddtw.egg-info/: SOURCES.txt
results/: best_final.json  branch_own_kill_oob_smoke.json  branch_own_known_heading_smoke.json  branch_own_legacy_smoke.json  branch_own_package_smoke.json  branch_own_route1_run1.json  branch_own_route1_run2.json  branch_own_route2_run1.json  branch_own_route2_run2.json  branch_own_smoke.json  branch_uji_kill_oob_smoke.json  branch_uji_smoke.json  debug_own_key.json  delete_check_route1_run1.json  delete_check_route2_run1.json  delete_check_uji.json  full_run.json  main_one_switch_route1_run2_smoke.json  main_one_switch_uji_tt03_smoke.json  migrated_own_branch_smoke.json  migrated_package_smoke.json  migrated_uji_smoke.json  own_simulation_route1_run1.json  own_simulation_route1_run1_raw_trimmed.json  own_simulation_route1_run1_raw_trimmed_nomirror.json  own_simulation_route1_run1_raw_trimmed_recheck.json  own_simulation_route1_run1_raw_trimmed_recheck_nomirror.json  own_simulation_route1_run1_smoke.json  own_simulation_route1_run1_waitbar_smoke.json  post_delete_own_branch_smoke.json  post_delete_package_smoke.json  post_delete_uji_smoke.json
tests/: conftest.py  run_benchmark.py  test_blocks.py  test_distance.py  test_models.py  test_nn.py
(+7 files in other folders)
